# chess_engine

./: .gitignore  CBitboardIterator.h  CBoard.cpp  CBoard.h  CMakeLists.txt  README.md  main.cpp  run.sh
